add missing test implementations