@@ -24,6 +24,9 @@ dependencies {
 	implementation 'org.postgresql:postgresql'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core'
+	testImplementation 'com.h2database:h2:1.3.148'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	compileOnly("org.springframework.boot:spring-boot-devtools")
@@ -34,5 +37,6 @@ bootJar {
 }
 
 tasks.named('test') {
-	// useJUnitPlatform()
+	useJUnitPlatform()
+	jvmArgs += ['-XX:+EnableDynamicAgentLoading']
 }
